# coral-save-editor

./: .gitattributes  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: main.yaml  release.yaml
apps/demo/: package.json  project.json  rspack.config.js  tsconfig.json
apps/demo/src/: index.html
apps/demo/src/app/: JSONEditor.tsx  app.tsx
apps/editor/: package.json  project.json  tailwind.config.js
apps/editor/src/: index.html  styles.scss
apps/editor/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts  nx-welcome.component.ts
apps/editor/src/app/coral-island-editor/: coral-island-editor.component.html  coral-island-editor.component.ts  coral-island-editor.routes.ts
apps/editor/src/app/coral-island-save-game/: coral-island-save-game.service.ts  coral-island-save-game.type.ts
apps/editor/src/app/file-handler/: file-handler.component.html  file-handler.component.scss  file-handler.component.spec.ts  file-handler.component.ts
apps/editor/src/app/shell/: shell.component.html  (+2 more)
libs/coral-guide-assets/: README.md  eslint.config.js  project.json
libs/coral-guide-assets/src/: index.ts
libs/coral-guide-assets/src/lib/: database.service.ts  map-keyed.type.ts  repository-url.const.ts
libs/coral-island-enums/: coral-island-enums.const.ts  extractor.ts  index.ts  save-game-enum.type.ts
libs/coral-island-ui/: README.md  eslint.config.js  project.json
libs/coral-island-ui/src/: index.ts
libs/coral-island-ui/src/styles/: _fonts.scss  _material-form-field.scss  _material-theme.scss
libs/coral-island-utils/: README.md  eslint.config.js  project.json  tsconfig.json
libs/coral-island-utils/src/: index.ts
libs/editor-types/: README.md  eslint.config.js  project.json
libs/editor-types/src/: index.ts
libs/editor-types/src/lib/: basic-struct.function.ts  enum.function.ts  flat-struct.function.ts  int.function.ts  name.function.ts  string.function.ts
libs/save_parser/: Cargo.toml  package.json  project.json
libs/save_parser/src/: lib.rs  types.rs
(+160 files in other folders)
