[package]
name = "save_parser"
version = "0.2.0"
authors = ["Naji Astier <na-ji@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
serde_json = "1.0.128"
flate2 = "1.0.33"
uesave = { git = "https://github.com/trumank/uesave-rs.git", rev = "2e60cb10c17a7c0f0ab70d525a6bb72f73b0dd32" }
js-sys = "0.3.70"
gloo-utils = { version = "0.2.0", features = ["serde"] }
byteorder = "1.5.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.70"
features = [
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'
